@@ -74,6 +74,7 @@ int main (void)
     {
 #ifdef _DPD_BACKEND
       {__LINE__,1.00DD, "+0,000,000,000,000,100E-2"},
+      {__LINE__,__DEC64_MIN__, "+0,000,000,000,000,001E-383"},
       {__LINE__,__DEC64_MAX__, "+9,999,999,999,999,999E+369"},
       {__LINE__,-DEC_NAN, "-0,000,000,000,000,000E-398"},
       {__LINE__,9.999999999999999E369DD, "+9,999,999,999,999,999E+354"},
